# SoccerRef-Agents

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Database/: README.md
Database/Text/: text.json
Database/Video/: video_600.json
KnowledgeBase/: README.md  classic_case_knowledge.json
src/: baseline.py  multi-agents.py
src/agents/: case_agent.py  chief_referee_agent.py  context_agent.py  orchestrator.py  rule_agent.py  video_agent.py
src/rag/: indexing.py
src/utils/: frame_extraction.py  get_raw_video_data.py  sample_subset.py  video_processing.py
